2005-08-26  Johan Dahlin  <jdahlin@async.com.br>

	* atk-types.defs (ImplementorIface): Make it a type on dynamically
	created subclasses implementing the interface to possibly avoid
	MRO issues.

	* gobject/gobjectmodule.c (pyg_signal_list_ids): Refactor to
	allow us to list signals on interfaces.

	* tests/test_signal.py (TestList): Two new tests.

2005-08-25  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/gobjectmodule.c (pyg_type_register): Don't g_free
	type_name parameter, otherwise it will cause a double-free elsewhere.
	
	* gobject/pygobject-private.h: Add const to char * parameter of
	pyg_type_register.

	* gobject/pygobject.c (pygobject_new_with_interfaces): Py_INCREF
	objects being added to a tuple in a couple of places, because
	PyTuple_SetItem steals a reference.  Fix 'bases' and 'dict'
	reference leaks.

2005-08-24  John Ehresman  <jpe@wingide.com>

	* gobject/pygobject.c: In the meta-class __init__ method,
	register a class as a gtype iff __gsignals__, __gproperties__,
	or __gtype_name__ is defined in the leaf class's tp_dict.  

2005-08-24  Johan Dahlin  <jdahlin@async.com.br>

	* configure.in: Post release version bump

== PyGTK 2.7.4 ==
2005-08-24  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Update

	* README: Update

2005-08-24  John Ehresman  <jpe@wingide.com>

	* setup.py: Added sources so gobject module will compile, fixed
	enable/disable thread support, and changed default so thread 
	support is enabled unless --disable-threading is specified
	
	* gobject/gobjectmodule.c, gobject/pygobject.c: Set 
	PyGObject_MetaType.tp_base in module initialization to keep
	VC++ happy

2005-08-24  Johan Dahlin  <jdahlin@async.com.br>

	* tests/test_conversion.py (Tests.testUIntArg): Add test for
	Table.attach which takes uint arguments.

	* codegen/argtypes.py (UIntArg.write_param): 
	One more take on fixing #300012, this time unsigned int conversion,
	patch by Gustavo.
	
2005-08-18  John Finlay  <finlay@moeraki.com>
