@@ -1,3 +1,8 @@
+2005-08-29  John Ehresman  <jpe@wingide.com>
+
+	* gobject/pygobject.c (pygobjectmeta_register): Remove unneeded
+	g_strdup.
+
 2005-08-26  Johan Dahlin  <jdahlin@async.com.br>
 
 	* atk-types.defs (ImplementorIface): Make it a type on dynamically
